Fixed the issue with the carousel that had to do with the images covering the heading below

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -83,7 +83,7 @@ strong {
 /* Bootstrap Carousel Section */
 section.bootstrap_carousel {
 	width: 50%;
-	max-height: 500px!important;
+	max-height: 550px!important;
 	margin: 0 auto;
 	padding: 10px 0px 5px 0px;
 }
